--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-17 09:20:59
-# Total rules: 5088
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-17 17:20:35
+# Total rules: 5127
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -17,6 +17,7 @@
 .2052.flash2-http.qq.com
 .27051a00.b-cdn.net
 .2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
+.2mdn.net
 .2xbits.blogspot.com
 .2xbits.eu.org
 .30032c91.b-cdn.net
@@ -159,6 +160,7 @@
 .adashx.m.taobao.com
 .adashx.ut.alibaba.com
 .adashx.ut.amap.com
+.adashx.ut.ele.me
 .adashx.ut.taobao.com
 .adashx.ut.uc.cn
 .adashx.ut.youku.com
@@ -197,12 +199,15 @@
 .adinf.cp11.ott.cibntv.net
 .adj.st
 .adjust.com
+.adjust.net.in
+.adjust.world
 .adkwai.com
 .adm.baidu.com
 .adm.leju.sina.com.cn
 .adm.shinobi.jp
 .admarket.21cn.com
 .admarvel.s3.amazonaws.com
+.admob.xiaomi.com
 .admost-banner.b-cdn.net
 .admusicpic.music.126.net
 .adnet.qq.com
@@ -218,6 +223,7 @@
 .adpublisher.s3.amazonaws.com
 .adrdir.qq.com
 .adreq.vivo.com.cn
+.ads-api.duolingo.com
 .ads-api.tiktok.com
 .ads-api.twitter.com
 .ads-api.x.com
@@ -309,6 +315,7 @@
 .adsfs-sdkconfig.heytapimage.com
 .adsfs.heytapimage.com
 .adsgroup.qq.com
+.adsh.m.taobao.com
 .adshmct.qq.com
 .adshmmsg.qq.com
 .adshows.21cn.com
@@ -329,6 +336,7 @@
 .adstatic.b-cdn.net
 .adstatic.zhihu.com
 .adstest.weather.com
+.adstestview.qq.com
 .adstextview.qq.com
 .adstore-1252524079.file.myqcloud.com
 .adstore-index-1252524079.file.myqcloud.com
@@ -355,6 +363,7 @@
 .advertising-api-eu.amazon.com
 .advertising-api-fe.amazon.com
 .advertising-api.amazon.com
+.advertising.adobe.com
 .advertising.apple.com
 .advertising.com
 .advertising.microsoft.com
@@ -378,7 +387,6 @@
 .afd.baidu.com
 .afd.l.google.com
 .affiliate-script-pr.firebaseapp.com
-.affiliate.2mdn.net
 .affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
@@ -391,6 +399,7 @@
 .agility.cnn.com
 .agkn.com
 .agoodm.m.taobao.com
+.agoodm.wapa.taobao.com
 .ahoy-internal-ads-hv.b-cdn.net
 .ai.m.taobao.com
 .ai.taobao.com
@@ -434,7 +443,6 @@
 .analytics.126.net
 .analytics.163.com
 .analytics.21cn.com
-.analytics.adjust.net.in
 .analytics.algolia.com
 .analytics.archive.org
 .analytics.bigdata.samsung.com
@@ -471,6 +479,7 @@
 .analytics.unity3d.com
 .analytics.us.archive.org
 .analytics.us.tiktok.com
+.analytics.vpc.duolingo.com
 .analytics.ws.126.net
 .analytics.yahoo.com
 .analytics.yicai.com
@@ -524,6 +533,7 @@
 .api.sprig.com
 .api.stacksocial.com
 .api.uca.cloud.unity3d.com
+.api.wapa.taobao.com
 .api.waptest.taobao.com
 .api.youqian.baidu.com
 .api5-normal-quic-lf.ixigua.com
@@ -533,10 +543,9 @@
 .app-analytics-services.com
 .app-measurement.com
 .app-monitor.ele.me
-.app.adjust.net.in
-.app.adjust.world
 .app.bugsnag.com
 .app.chat.xiaomi.net
+.app.pendo.io
 .app.posthog.com
 .app.reuters.com
 .app.scene7info.adobe.com
@@ -704,6 +713,7 @@
 .buluo.qq.com
 .business-api.tiktok.com
 .buy-cheap-phentermine.blogspot.com
+.byteadverts.com
 .bzclk.baidu.com
 .c-5uwzmx78pmca09x24aiux2euavx2ekwu.g00.msn.com
 .c-adash.m.taobao.com
@@ -789,7 +799,6 @@
 .cdn.ark.qq.com
 .cdn.avantisvideo.com
 .cdn.decibelinsight.net
-.cdn.onesignal.com
 .cdn.tanx.com
 .cdn.ynuf.aliapp.org
 .cdnweb3.pages.dev
@@ -821,6 +830,7 @@
 .classify-client.services.mozilla.com
 .clc.stackoverflow.com
 .cleaner.baidu.com
+.click.ali213.net
 .click.alimama.com
 .click.aliyun.com
 .click.bes.baidu.com
@@ -2298,6 +2308,7 @@
 .data.test3.test.ajo.adobe.com
 .data.tsbuat.test.ajo.adobe.com
 .data.ultimate-success-emea.test.ajo.adobe.com
+.data.vod.itc.cn
 .data.wunderman-email.cjm.adobe.com
 .datadoghq-browser-agent.com
 .dataflow.biliapi.com
@@ -2494,6 +2505,7 @@
 .dmtracking2.alibaba.com
 .dmtw0i4zln92b.cloudfront.net
 .dmz3nd5oywtsw.cloudfront.net
+.dn-growing.qbox.me
 .dn34cbtcv9mef.cloudfront.net
 .dn3uy6cx65ujf.cloudfront.net
 .dn6rwwtxa647p.cloudfront.net
@@ -2790,6 +2802,7 @@
 .experience.contextly.com
 .extlog.snssdk.com
 .ezodn.com
+.f.convertkit.com
 .f10.baidu.com
 .f11.baidu.com
 .f12.baidu.com
@@ -2822,6 +2835,7 @@
 .fef258ef.b-cdn.net
 .fengkongcloud.com
 .fexclick.baidu.com
+.ff.win.taobao.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
 .ffe390afd658c19dcbf707e0597b846d.de
 .file.daihuo.qq.com
@@ -2896,8 +2910,8 @@
 .ganon.yahoo.com
 .gatecollect.kugou.com
 .gb.corp.163.com
+.gc.sec.miui.com
 .gcapi.sy.kugou.com
-.gcdn.2mdn.net
 .gdfp.gifshow.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
@@ -2967,6 +2981,8 @@
 .gpm-mon-sg.byteoversea.com
 .gqjppj.rentcafe.com.cdn.cloudflare.net
 .grand.ele.me
+.graph-fallback.instagram.com
+.graph.instagram.com
 .gridsumdissector.com
 .growingio.com
 .grs.hicloud.com
@@ -2975,8 +2991,13 @@
 .gsp1.baidu.com
 .gtm.temu.com
 .gtm.wise.com
+.gtms01.alicdn.com
+.gtms02.alicdn.com
+.gtms03.alicdn.com
+.gtms04.alicdn.com
 .gtmsdd.alicdn.com
 .gtrk.s3.amazonaws.com
+.guanggaoad.youku.com
 .guanjia.baidu.com
 .guardianapps.co.uk
 .guess.h.qhimg.com
@@ -3002,6 +3023,7 @@
 .haiwai-ic.ksosoft.com
 .hao.360.cn
 .hao.uc.cn
+.hao123union.baidu.com
 .happy-davinci-53144f.netlify.com
 .hbid.ams3.cdn.digitaloceanspaces.com
 .hc.baidu.com
@@ -3054,12 +3076,10 @@
 .httpsdns.baidu.com
 .huatuo.qq.com
 .huaxiang.eastmoney.com
-.hudong.pl.youku.com
 .hugelog.fcbox.com
 .hui.sohu.com
 .huichuan.sm.cn
 .huodong.mi.com
-.huodong.pl.youku.com
 .huodong.vip.youku.com
 .husky.sogou.com
 .hwstats.unity3d.com
@@ -3074,6 +3094,7 @@
 .i.paypal.com
 .i.posthog.com
 .i.skimresources.com
+.i.snssdk.com
 .i.viafoura.co
 .i1.services.social.microsoft.com
 .i16-tb.isnssdk.com
@@ -3087,6 +3108,8 @@
 .iad-08.braze.com
 .iad.apple.com
 .iadcontent.apple.com
+.iadmat.nosdn.127.net
+.iadmatapk.nosdn.127.net
 .iadmatvideo.nosdn.127.net
 .iadmoo.apple.com
 .iadmusicmat.music.126.net
@@ -3102,6 +3125,7 @@
 .ichnaea.netflix.com
 .idm-su.baidu.com
 .idm.api.autohome.com.cn
+.idm.api.io.mi.com
 .idm.bce.baidu.com
 .idstatus.sky.com
 .iebar.baidu.com
@@ -3140,6 +3164,7 @@
 .imagev2.tx.xmcdn.com
 .imapi-sg.isnssdk.com
 .imdns.hpplay.cn
+.img-bss.csdn.net
 .img-c.heytapimage.com
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
@@ -3191,6 +3216,8 @@
 .interest.mix.sina.com.cn
 .intergient.com
 .internal-e.posthog.com
+.intl.wapa.taobao.com
+.intl.waptest.taobao.com
 .iob.imgur.com
 .ios-informationplatform.wps.cn
 .ip.taobao.com
@@ -3208,7 +3235,7 @@
 .iwanad.baidu.com
 .iyes.youku.com
 .j.br.baidu.com
-.j.wit.qq.com
+.ja2.gamersky.com
 .jac.yahoosandbox.com
 .janapi.jd.com
 .jdsbyb.webmd.com
@@ -3393,13 +3420,13 @@
 .luimg.baidu.com
 .lupic.cdn.bcebos.com
 .lvip.youku.com
+.lxbjs.baidu.com
 .lxcdn.dl.files.xiaomi.net
 .m-adash.m.taobao.com
-.m.2mdn.net
+.m.intl.taobao.com
 .m.qpic.cn
 .m.simba.taobao.com
 .m.yap.yahoo.com
-.m1.2mdn.net
 .m1.baidu.com
 .ma-adx.ctrip.com
 .ma.baidu.com
@@ -3421,6 +3448,7 @@
 .marketing.agora.io
 .marketing.alibaba.com
 .marketing.mangacopy.com
+.marketingplatform.google.com
 .marketingsolutions.yahoo.com
 .marketo.com
 .martech.condenastdigital.com
@@ -3460,6 +3488,7 @@
 .mermaid.ximalaya.com
 .messaging-notifications.api.nytimes.com
 .meter-svc.nytimes.com
+.metrics-api.dimensions.ai
 .metrics-cbslocal-com.cdn.ampproject.org
 .metrics-ieeexplore.ieee.org
 .metrics-logger.spot.im
@@ -3471,6 +3500,8 @@
 .metrics.chase.com
 .metrics.cnn.com
 .metrics.doppiocdn.com
+.metrics.duolingo.com
+.metrics.elsevier.com
 .metrics.icloud.com
 .metrics.imdb.com
 .metrics.kapa.ai
@@ -3682,6 +3713,7 @@
 .omtrdc.net
 .oneid.mmstat.com
 .onepush.query.yahoo.com
+.onesignal.com
 .onetag-sys.com
 .onethingpcs.com
 .online-forex-trading-systems.blogspot.com
@@ -3715,10 +3747,12 @@
 .os-mon.zijieapi.com
 .osfota.cdn.aliyun.com
 .osimg.nbcuni.com
+.osupdate.aliyun.com
 .otf.msn.com
 .oth.eve.qq.com
 .otpercpiheno.blogspot.com
 .outlookads.live.com
+.outreach.crossref.org
 .p-log.ykimg.com
 .p.alimama.com
 .p.controld.com
@@ -3775,6 +3809,7 @@
 .pb3.pstatp.com
 .pbc.wsj.com
 .pbd.sogou.com
+.pbmp.ali213.net
 .pbxai.com
 .pc-mon.zijieapi.com
 .pc.uf.ksosoft.com
@@ -3833,6 +3868,7 @@
 .pixels.spotify.com
 .pixiu.shangshufang.ksosoft.com
 .pl.cp31.ott.cibntv.net
+.pl.youku.com
 .plaus.outpost.pub
 .play.kakao.com
 .player-metrics.instaread.co
@@ -4000,8 +4036,6 @@
 .rm.sina.com.cn
 .rmads.eu.msn.com
 .rmads.msn.com
-.rmcdn.2mdn.net
-.rmcdn.f.2mdn.net
 .rmgdapfnccsharpprd.azurewebsites.net
 .rmoeu.mercury.sogou.com
 .rmonitor.qq.com
@@ -4035,8 +4069,6 @@
 .s.lenovo.com
 .s.skimresources.com
 .s.so.360.cn
-.s0.2mdn.net
-.s1.2mdn.net
 .s3t3d2y8.afcdn.net
 .sa.api.intl.miui.com
 .sa.sina.cn
@@ -4113,6 +4145,7 @@
 .segment.io
 .sensorsdata.cn
 .sentinelbi.com
+.sentry.d.mi.com
 .sentry.d.xiaomi.net
 .sentry.music.163.com
 .server.iad.liveperson.net
@@ -4123,6 +4156,7 @@
 .sessions.bugsnag.com
 .sestat.baidu.com
 .setting.snswin.qq.com
+.sf3-ttcdn-tos.pstatp.com
 .sfp.safe.baidu.com
 .sfsafsadfjbbj-dsafjnb-1321533417.cos.ap-beijing.myqcloud.com
 .sg.a.stat.mi.com
@@ -4165,6 +4199,7 @@
 .smetrics.chase.com
 .smetrics.cnn.com
 .smetrics.digicert.com
+.smetrics.elsevier.com
 .smetrics.flex.amazon.com
 .smetrics.marketing.meethue.com
 .smetrics.marketing.philips-hue.com
@@ -4262,7 +4297,6 @@
 .static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
 .static-tracking.klaviyo.com
-.static.2mdn.net
 .static.addtoany.com
 .static.alimama.com
 .static.ku6.com
@@ -4273,6 +4307,7 @@
 .staticfile.net
 .staticfile.org
 .staticxx.facebook.com
+.statis.api.3g.youku.com
 .statis.mobile.youku.com
 .statis.push.netease.com
 .statistic.qzone.qq.com
@@ -4372,6 +4407,7 @@
 .techain.baidu.com
 .techhome-js.github.io
 .techprovider.intel.com
+.tejia.taobao.com
 .telegramweb.vercel.app
 .telemetrics.klaviyo.com
 .telemetry-coverage.mozilla.org
@@ -4413,6 +4449,7 @@
 .tj.kugou.com
 .tj.video.qq.com
 .tj.youzanyun.com
+.tjs.sjs.sinajs.cn
 .tk.baidu.com
 .tkweb.baidu.com
 .tma.snssdk.com
@@ -4604,6 +4641,10 @@
 .v.shopify.com
 .v16-ad.byteoversea.com
 .v2st.shinobi.jp
+.v6-adashx.ut.amap.com
+.v6-adashx.ut.cainiao.com
+.v6-adashx.ut.ele.me
+.v6-adashx.ut.taobao.com
 .v9banners-com.cdn.ampproject.org
 .val.api.youku.com
 .vcl-brain.snssdk.com
@@ -4705,6 +4746,7 @@
 .wip3.adobe.com
 .wisepops.com
 .wisepush.video.baidu.com
+.wit.qq.com
 .wiwqhootrf.com
 .wkclick.baidu.com
 .wkctj.baidu.com
@@ -4773,6 +4815,7 @@
 .ybp.yahoo.com
 .yc-ads.s3.amazonaws.com
 .ye.dun.163yun.com
+.yektanet.com
 .yengo.com
 .yieldmo-builds.s3.amazonaws.com
 .ykad-data.youku.com
@@ -4806,6 +4849,7 @@
 .zx.docin.com
 .zymo.mps.weibo.com
 .zz.bdstatic.com
+643108e7617ef.cdn.sohucs.com
 9ibbcq2d.sina.cn
 ac.dun.163yun.com
 acfeedbackws.icloud.com
@@ -4818,13 +4862,11 @@ ad.bn.netease.com
 ad.gamebox.360.cn
 ad.iot.360.cn
 adapi.shouji.360.cn
-adashx.ut.ele.me
 adavideo.baidu.com
 adlog.vivo.com.cn
 adproxy.autohome.com.cn
 ads.privacy.qq.com
 adsehera.ximalaya.com
-adsh.m.taobao.com
 adsh.wagbridge.1688.alimama.com
 adsh.wagbridge.alibaba.alimama.com
 adsh.wagbridge.tanx.alimama.com
@@ -4868,6 +4910,7 @@ bgp.fe01.c3.xiaomi.com
 bk01.hh.xiaomi.com
 bksoup.v.qq.com
 blog.xiaomi.com
+bloodhound.spotify.com
 bs.l.qq.com
 c.id.mi.com
 c.l.qq.com
@@ -4898,6 +4941,7 @@ dns.m.sm.cn
 dns.wechat.com
 download.wan.sohu.com
 du.163.com
+e8aeb8bbdbbd7.cdn.sohucs.com
 err.taobao.com
 events-analytics.apple.com
 f1.g.mi.com
@@ -4913,17 +4957,13 @@ font.sec.miui.com
 free-aos-cdn-image.amap.com
 frontier-aweme-hl.snssdk.com
 fyb-2.cdn.bcebos.com
+game.sec.miui.com
 game.wostore.cn
 gecko-hl.snssdk.com
 gecko-lq.snssdk.com
 geo.hicloud.com
 geolocation.onetrust.com
 global.search.xiaomi.net
-gtms01.alicdn.com
-gtms02.alicdn.com
-gtms03.alicdn.com
-gtms04.alicdn.com
-guanggaoad.youku.com
 hc-ssp.sm.cn
 hd.xiaojukeji.com
 hd.xiaomi.com
@@ -4943,8 +4983,6 @@ huodong.xiaomi.com
 huosai.xiaomi.com
 i.xiaomi.com
 iad.g.163.com
-iadmat.nosdn.127.net
-iadmatapk.nosdn.127.net
 igame.xiaomi.com
 ilce.alicdn.com
 ime.api.xiaomi.com
@@ -4992,8 +5030,11 @@ mtt.str.mdt.qq.com
 news-l.play.ott.video.qq.com
 news.l.qq.com
 nlog.baidu.com
+o33249.ingest.sentry.io
+o4504926511693824.ingest.sentry.io
 omgmta.play.ott.video.qq.com
 onrt-stsdk.vivo.com.cn
+openaicom.imgix.net
 openjmacs.m.taobao.com
 openpanel.follow.is
 order.music.xiaomi.com
@@ -5005,11 +5046,11 @@ oth.update.mdt.qq.com
 p.l.qq.com
 p2.l.qq.com
 p2sdmkj6t.bkt.clouddn.com
+p3-ad-sign.byteimg.com
 pb.hd.sohu.com.cn
 pg-ad-b1.ws.126.net
 pg-ad-b2.ws.126.net
 phonecallapi.micloud.xiaomi.net
-pl.youku.com
 pmall.migc.xiaomi.com
 pnrt-stsdk.vivo.com.cn
 pre-ad.alimama.com
@@ -5030,7 +5071,6 @@ samsungeurope.eu.qualtrics.com
 saxs.sina.cn
 sdfp.snssdk.com
 secode2.hd.xiaomi.com
-sentry.d.mi.com
 sf0.market.xiaomi.com
 sfsapi.micloud.xiaomi.net
 shoes.app-xae.xiaomi.com
@@ -5041,7 +5081,6 @@ splashimgretrybssdl.cloud.kugou.com
 stat.dns.sb
 stat.loli.net
 static.mibi.xiaomi.com
-statis.api.3g.youku.com
 stats.xiaomi.com
 stnetsdk.appstore.vivo.com.cn
 stnetsdk.vivo.com.cn
